Fixed the nav to make it stays in the same place while changing the website layout. I also create a new file for the Advanced Search, however now I got stuck on arranging the labels and inputs to make it align just like Google's Advanced Search.

--- a/CS50/styles.scss
+++ b/CS50/styles.scss
@@ -18,9 +18,9 @@
     }
 }
 
-nav{
-    border: 1px solid black;
+.navbar{
     position: fixed;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     top: 0;
@@ -66,6 +66,27 @@ form{
     }
 }
 
+//for advanced search
+#adv_search_logo{
+    margin: 10px;
+    width: 90px;
+    height: 30px;
+}
+
+#adv_search_label{
+    color: rgb(235, 8, 8);
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 30px;
+}
+
+form .adv_search_ls{
+    margin-left: 0;
+}
+
+hr{
+    border: .5px solid rgb(225, 219, 219);
+}
 
 @media screen and (max-width: 760px) {
     #main_logo{
@@ -75,7 +96,6 @@ form{
     .logo{
         #img_sign{
             position: scroll;
-            white-space: nowrap;
             margin-top: 80px;
             margin-left: -60px;
             font-size: 8px;
@@ -106,28 +126,3 @@ form{
     }
 }
 
-@media screen and (max-width: 1113px) {
-    nav{
-    position: absolute;
-    top: 0;
-    left: 80%;
-    ul{
-        list-style: none;
-        margin: 10;
-        li{
-            display: inline-block;
-            padding-right: 10px;
-            a{
-                display: inline-block;
-                text-decoration: none;
-                color: rgb(49, 47, 47);
-                &:hover{
-                    color: blue;
-                    text-decoration: underline;
-                }
-            }
-        }
-    }
-    }
-   
-}
